<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity" android:background="@drawable/backgroundtrio">

    <ProgressBar
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            style="@android:style/Widget.Material.ProgressBar.Large"/>
    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp" app:srcCompat="@drawable/triologo" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleX="1" android:scaleY="1" android:layout_margin="20dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="140dp"
            android:visibility="visible"
            android:id="@+id/constLay" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0">

        <TextView
                android:text="Вход"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2"
                android:fontFamily="sans-serif"
                android:textSize="34sp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_margin="20dp" android:textColor="#000000"/>
        <TextView
                android:text="Логин не найден"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/loginNot"
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintBottom_toTopOf="@+id/username" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" android:textColor="#EA0000" android:visibility="gone"/>
        <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_margin="20dp"
                android:outlineProvider="background" android:outlineSpotShadowColor="#000000"
                android:backgroundTint="#D8ABED" android:background="@android:drawable/dialog_holo_light_frame"
                android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:focusedByDefault="true"/>
        <TextView
                android:text="Пароль не верный"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/passwordNot"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/username"
                app:layout_constraintBottom_toTopOf="@+id/password" android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" android:textColor="#EA0000" android:visibility="gone"/>
        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_margin="20dp" android:ellipsize="middle"
                app:layout_constraintTop_toBottomOf="@+id/username"
                android:background="@android:drawable/dialog_holo_light_frame" android:backgroundTint="#D7AAEC"/>
        <Button
                android:id="@+id/login"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/action_sign_in"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/password"
                android:layout_marginTop="20dp"
                android:backgroundTint="#70BCFE" app:strokeColor="#2984D5" app:strokeWidth="4dp"
                app:iconTint="#000000"
                android:typeface="normal" app:rippleColor="#656565" app:circularflow_radiusInDP="20"
                android:textColor="#000000" android:paddingLeft="40dp" android:paddingRight="40dp"
                android:paddingTop="10dp" android:paddingBottom="10dp"/>
        <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Регистрация"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/login"
                android:layout_marginTop="20dp"
                android:backgroundTint="#70BCFE" app:strokeColor="#2984D5" app:strokeWidth="4dp"
                app:iconTint="#000000"
                android:typeface="normal" app:rippleColor="#656565" app:circularflow_radiusInDP="20"
                android:textColor="#000000" android:paddingLeft="40dp" android:paddingRight="40dp"
                android:paddingTop="10dp" android:paddingBottom="10dp"/>
        <TextView
                android:text="Войдите в свой аккаунт"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="20dp"/>
        <TextView
                android:text="Нет соединения"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/connection"
                android:textSize="20sp" android:textStyle="bold" android:textColor="#EA0000"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintHorizontal_bias="0.26"
                android:layout_marginTop="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>